# election-assistant

./: .gitignore  README.md  firebase.json  firestore.rules  project.txt
backend/: .env.example  Dockerfile  agent.py  election_data.py  intent.py  main.py  middleware.py  models.py  pyproject.toml  rag.py  tools.py
backend/tests/: conftest.py  test_agent.py  test_api.py  test_election_data.py  test_middleware.py  test_proxy.py
docs/: architecture.md
frontend/: package-lock.json  package.json
frontend/__tests__/: speech.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: EligibilityChecker.tsx  ErrorBoundary.tsx  Icons.tsx  MessageBubble.tsx  SettingsPanel.tsx  TypingIndicator.tsx  VotingFlow.tsx
frontend/lib/: TranslationContext.tsx  firebase.ts  speech.ts  translate.ts  uiStrings.ts
frontend/lib/hooks/: useChat.ts  useSpeech.ts
